force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__BodyText__c.field-meta.xml
<CustomField>
    <fullName>ssot__BodyText__c</fullName>
    <label>Body Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BodyText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>