force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__ClickThroughPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClickThroughPercent__c</fullName>
    <label>Click Through Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClickThroughPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>