force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__EmailContentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailContentId__c</fullName>
    <label>Email Content</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailContentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>