force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__MarketAudienceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MarketAudienceId__c</fullName>
    <label>Market Audience</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MarketAudienceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>