force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__MessagePurpose__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessagePurpose__c</fullName>
    <label>Message Purpose</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessagePurpose</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>