force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__OptOutPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__OptOutPercent__c</fullName>
    <label>Opt Out Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OptOutPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>