force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__rel_1696932794606_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1696932794606_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkEmailMessage_CommunicationSubscr_rel</label>
    <referenceTo>ssot__CommunicationSubscriptionChannelType__dlm</referenceTo>
    <relationshipLabel>BulkEmailMessage_CommunicationSubscr_rel</relationshipLabel>
    <relationshipName>rel_1696932794606_end</relationshipName>
    <type>Lookup</type>
</CustomField>