force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__rel_1697761220951_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761220951_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkEmailMessage_MarketAudienceId_ma_rel</label>
    <referenceTo>ssot__MarketAudience__dlm</referenceTo>
    <relationshipLabel>BulkEmailMessage_MarketAudienceId_ma_rel</relationshipLabel>
    <relationshipName>rel_1697761220951_end</relationshipName>
    <type>Lookup</type>
</CustomField>