force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__rel_1697761221198_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761221198_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkEmailMessage_MarketSegmentId_map_rel</label>
    <referenceTo>ssot__MarketSegment__dlm</referenceTo>
    <relationshipLabel>BulkEmailMessage_MarketSegmentId_map_rel</relationshipLabel>
    <relationshipName>rel_1697761221198_end</relationshipName>
    <type>Lookup</type>
</CustomField>