force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScheduledDate__c</fullName>
    <label>Scheduled Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScheduledDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>