force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__SendMechanismName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SendMechanismName__c</fullName>
    <label>Send Mechanism Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SendMechanismName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>