force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__TotalSoftBounceQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalSoftBounceQuantity__c</fullName>
    <label>Total Soft Bounce Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalSoftBounceQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>