force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__TotalSpamComplaintsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalSpamComplaintsQuantity__c</fullName>
    <label>Total Spam Complaints Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalSpamComplaintsQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>