force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__TotalTrackedLinkClicksQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalTrackedLinkClicksQuantity__c</fullName>
    <label>Total Tracked Link Clicks Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalTrackedLinkClicksQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>