force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__UniqueClickThroughPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueClickThroughPercent__c</fullName>
    <label>Unique Click Through Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueClickThroughPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>