force-app/main/default/objects/ssot__BulkEmailMessage__dlm/fields/ssot__UniqueOptOutsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueOptOutsQuantity__c</fullName>
    <label>Unique Opt Outs Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueOptOutsQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>